syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.edumatt3";
option java_outer_classname = "Freight";
option objc_class_prefix = "HLW";

package br.com.edumatt3;

service FreightService {
  rpc send (FreightRequest) returns (FreightReply) {}
  rpc calculateFreight(CalculateFreightRequest) returns (CalculateFreightResponse){}
}

message ErrorDetails {
  int32 code = 1;
  string message = 2;
}

message CalculateFreightRequest {
  string zipcode = 1;
}

message CalculateFreightResponse {
  double value = 1;
  string zipcode = 2;
}

message FreightRequest {
  string name = 1;
}

message FreightReply {
  string message = 1;
}